--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
   padding: 0 10px;
 }
 .column1 {
-  float: left;
+  float: right;
   width: 25%;
-  padding: 0 230px;
+  padding: 0 276px;
+  margin-top: 5px;
 }
 .card 
 {
@@ -14,13 +15,28 @@
   padding: 16px;
   text-align: left;
   background-color: #FFFFFF;
-  width: 400px;
+  width: 300px;
+}
+.card1 
+{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: left;
+  width: 300px;
+  background-color: #FFF0EC;
 }
 .lb
 {
-	background: blue;
-	color: white;
-	height: 50px;
-	font-size: 30px;
-	text-align: center;
+  background: blue;
+  color: white;
+  height: 50px;
+  font-size: 30px;
+  text-align: center;
+}
+.card2 
+{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+  padding: 16px;
+  width: 350px;
+  background-color: #ddd;
 }
